# diffractionSimulation

./: CMakeLists.txt  README.md  VO2.cif  bragg_pattern.txt  diffraction_pattern.txt  plot.ipynb
include/: aligned_memory.h  braggcalculation.h  cifparser.h  debyescattering.h  fitting.h
src/: braggcalculation.cpp  cifparser.cpp  debyescattering.cpp  fitting.cpp  main.cpp
